WIP commit - minor edits

--- a/ldo-mc-vr.bib
+++ b/ldo-mc-vr.bib
@@ -237,3 +237,10 @@
   year         = 2018,
   url          = {https://github.com/kellyrowland/dissertation}
 }
+
+@book{bg,
+  title={Nuclear Reactor Theory.},
+  author={Bell, George I. and Glasstone, Samuel},
+  year={1970},
+  institution={Division of Technical Information, US Atomic Energy Commission}
+}
